[package]
name = "pod-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
solana-program = "=1.10.0"

[dev_dependencies]
solana-program-test = "=1.10.0"
solana-sdk = "1.10.0"

[lib]
crate-type = ["cdylib", "lib"]

[patch.crates-io]
solana-clap-utils = {path = "solana/clap-utils" }
solana-cli-config = {path = "solana/cli-config" }
solana-client = { path = "solana/client"}
solana-logger = { path = "solana/logger"}
solana-program = { path = "solana/sdk/program" }
solana-program-test = { path = "solana/program-test" }
solana-program-runtime = { path = "solana/program-runtime" }
solana-remote-wallet = { path = "solana/remote-wallet"}
solana-sdk = { path = "solana/sdk" }
solana-test-validator = { path = "solana/test-validator"}
solana-validator = { path = "solana/validator"}
solana-zk-token-sdk = { path = "solana/zk-token-sdk"}
